# Question-Pairs

./: .gitignore  main.py  pyproject.toml  requirements.txt
Notebook/: Initial_Eda.ipynb  bow-with-basic-features.ipynb  bow-with-preprocessing-and-advanced-features.ipynb  cv.pkl  only_bow.ipynb
