[project]
name = "quora-question-pairs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "cycler>=0.12.1",
    "cython==0.29.21",
    "distance>=0.1.3",
    "fuzzywuzzy>=0.18.0",
    "gensim==4.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "scikit-learn>=1.6.1",
    "scipy==1.11.4",
    "seaborn>=0.13.2",
    "spacy==3.6.1",
    "xgboost>=3.0.1",
]
